package baseline;

import javafx.scene.Parent;
import javafx.scene.Scene;
import javafx.stage.Stage;

import java.awt.event.ActionEvent;

public class SceneSwitcher {
    private static Stage stage;
    private static Scene scene;
    private static Parent root;

    public static void switchItemList(ActionEvent event) {
        // create new root, scen and stage
        // switch to ItemList fxml scene
    }

    public static void switchTodoList(ActionEvent event) {
        // create new root, scen and stage
        // switch to TodoList fxml scene
    }
}
