@startuml

class Application {
+ void main()
+ void start()
}

class TodoList {
-String title
-List<Item> itemList

+ TodoList(String title)
+ TodoList(String title, List<Item> itemList)
+ void addItem(Item item)
+ void updateItem(Item prevItem, Item newItem)
+ void removeItem(Item item)
+ List<Item> getItemList()
+ List<Item> getComplete()
+ List<Item> getIncomplete()
+ List<Item> getSortedByDate()
+ setTitle(String title)
+ String getTitle()
+ int getSize()
}

class Item {
-String title
-String description
-Boolean isComplete
-LocalDate dueDate

+ Item(String title, String description, Boolean isComplete, LocalDate dueDate)
+ String getTitle()
+ void setTitle(String title)
+ String getDescription()
+ void setDescription(String description)
+ Boolean getComplete()
+ void setComplete(Boolean complete)
+ LocalDate getDueDate()
+ void setDueDate(LocalDate dueDate)
+ String getFormattedDueDate()
}

class SceneSwitcher {
-static Stage stage
-static Scene scene
-static Parent root

+ static void switchItemList(ActionEvent event)
+ tatic void switchTodoList(ActionEvent event)
}

class ItemListController {
-SceneSwitcher sceneSwitcher
-TodoList todolist
-TableView itemsTableView
-TableColumn titleColumn
-TableColumn dueDateColumn
-TableColumn statusColumn
-TextField titleTextField
-TextArea descriptionTextArea
-DatePicker dueDatePicker
-Checkbox isCompleteCheckBox

+ void initalizeScene(TodoList todoList)
+ void updateTableView()
+ void updateItemView(Item item)
+ void addItem()
+ void removeSelectedItem()
+ void updateSelectedItem()
+ void onItemSelection()
}

class TodoListsController {
-SceneSwitcher sceneSwitcher
-List<TodoList> todoLists
-TableView todoTableView
-TableColumn titleColumn
-TableColumn itemAmountColumn
-TableColumn completedAmountColumn
-TableColumn incompletedAmountColumnlumn
-TextField listTitleTextField

+ void initialize(URL location, ResourceBundle resources)
+ void loadTodoLists()
+ void updateTableView()
+ void updateItemView(Item item)
+ void addItem()
+ void removeSelectedItem()
+ void updateSelectedItem()
+ void onItemSelection()
}

TodoListsController -- SceneSwitcher
ItemListController -- SceneSwitcher
Application -- SceneSwitcher
TodoList -- Item
TodoList -- TodoListsController
TodoList -- ItemListController
javafx.Application <|-- Application

@enduml